// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render item when render returns undefined 1`] = `
.css-0,
[data-css-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex: 1;
  -webkit-flex: 1;
}

<div
  class="css-0 autosuggest"
>
  <ul>
    
  </ul>
</div>
`;

exports[`renders nothing if data is empty 1`] = `null`;

exports[`renders nothing if data not provided 1`] = `null`;

exports[`renders nothing if query not provided 1`] = `null`;

exports[`renders suggestions 1`] = `
.css-0,
[data-css-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex: 1;
  -webkit-flex: 1;
}

.css-1,
[data-css-1] {
  padding: 12px 0;
  text-align: center;
  font-size: 24px;
}

<div
  class="css-0 autosuggest"
>
  <ul>
    <li
      class="css-1"
    >
      abide
    </li>
    <li
      class="css-1"
    >
      abysmal
    </li>
  </ul>
</div>
`;
